(feat) add immediate screenshot mode and skip screenshot flags
