# web/docs/swagger.json
@@ -291,6 +291,40 @@
                 }
             }
         },
+        "/submit/single": {
+            "post": {
+                "description": "Starts a new probing routine for a URL and options, returning the results when done.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Results"
+                ],
+                "summary": "Submit a single URL for probing",
+                "parameters": [
+                    {
+                        "description": "The URL scanning request object",
+                        "name": "query",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.submitSingleRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Probing started",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/wappalyzer": {
             "get": {
                 "description": "Get all of the available wappalyzer data.",
@@ -538,6 +572,17 @@
                 }
             }
         },
+        "api.submitSingleRequest": {
+            "type": "object",
+            "properties": {
+                "options": {
+                    "$ref": "#/definitions/api.submitRequestOptions"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "api.technologyListResponse": {
             "type": "object",
             "properties": {
@@ -734,6 +779,9 @@
                 },
                 "perception_hash": {
                     "type": "string"
+                },
+                "perception_hash_group_id": {
+                    "type": "integer"
                 },
                 "probed_at": {
                     "type": "string"
